--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,7 @@
 
 /* Your CSS Code here. */
+.holder {
+  display: grid;
+  grid-template-columns: repeat(2, 100px); /* Creates two columns of 100px each */
+  grid-template-rows: repeat(2, 100px);    /* Creates two rows of 100px each */
+}
